# plasma-widget-menubar

./: CMakeLists.txt  Messages.sh  NEWS  RELEASE_CHECK_LIST  plasma-widget-menubar_0.1.16.orig.tar.bz2.delta  plasma-widget-menubar_0.1.16.orig.tar.bz2.id  plasma-widget-menubar_0.1.17.orig.tar.bz2.delta  plasma-widget-menubar_0.1.17.orig.tar.bz2.id  plasma-widget-menubar_0.2.0.orig.tar.bz2.delta  plasma-widget-menubar_0.2.0.orig.tar.bz2.id
debian/: changelog  control  copyright  rules  watch
src/: CMakeLists.txt  com.canonical.AppMenu.Renderer.xml  gtkicontable.cpp  gtkicontable.h  kappmenuimporter.cpp  kappmenuimporter.h  menubarapplet.cpp  menubarapplet.h  menucloner.cpp  menuwidget.cpp  menuwidget.h  registrar.cpp  registrar.h  windowmenumanager.cpp
tests/: CMakeLists.txt  MANUAL_TESTS  gtkicontabletest.cpp  largemenubar.py  updatingmenubar.py
